<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Row1-->
            <LinearLayout
                android:padding="@dimen/padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--First-->
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:id="@+id/imvIcon1"
                        android:src="@drawable/icon1"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon" />



                    <!--Label-->
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="@dimen/h2"
                        android:text="@string/label1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



                </LinearLayout>


                <!--Second-->
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:id="@+id/imvIcon2"
                        android:src="@drawable/icon2"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon" />



                    <!--Label-->
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="@dimen/h2"
                        android:text="@string/label2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



                </LinearLayout>

            </LinearLayout>

            <!--Row2-->
            <LinearLayout
                android:padding="@dimen/padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--First-->
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:id="@+id/imvIcon3"
                        android:src="@drawable/icon3"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon" />



                    <!--Label-->
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="@dimen/h2"
                        android:text="@string/label3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



                </LinearLayout>


                <!--Second-->
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:id="@+id/imvIcon4"
                        android:src="@drawable/icon4"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon" />



                    <!--Label-->
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="@dimen/h2"
                        android:text="@string/label4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



                </LinearLayout>

            </LinearLayout>

            <!--Row3-->
            <LinearLayout
                android:padding="@dimen/padding"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--First-->
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--icon-->
                    <ImageView
                        android:id="@+id/imvIcon5"
                        android:src="@drawable/icon2"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="@dimen/icon"
                        android:layout_height="@dimen/icon" />



                    <!--Label-->
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"
                        android:textSize="@dimen/h2"
                        android:text="@string/label5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />



                </LinearLayout>


                <!--Second-->
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">





                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>